Page MenuHome GnuPG

Kleopatra: Remember last used file system locations when saving or opening files
Closed, ResolvedPublic

Description

Kleopatra should remember where the user has saved a file or from where they have opened a file and offer the same location the next time the user uses the same workflow, e.g. when a user created a CSR and saved it in folder $HOME/foo then Kleopatra should open the file save dialog at $HOME/foo when the user creates another CSR. By default, Kleopatra should use the Documents folder.

Note: Kleopatra did already cache the last used folder for some operations, but only in memory. The purpose of this ticket is to make this caching persistent, so that it survives a restart of Kleopatra. It's not the purpose of this ticket to remember the last used folder for all existing workflows in Kleopatra. If you notice that the caching is missing for some workflow then create a separate ticket for this.

Note for testing: Since Kleopatra did already cache the locations in memory you'll have to restart Kleopatra to verify that the locations are now remembered persistently.

The following file system locations use the to-be-improved mechanism. You don't have to test all of them since it's a generic mechanism.

  • checksum creation and verification
  • decrypt/verify files
  • sign/encrypt files
  • export certificates, groups, secret keys, secret subkeys
  • secret key backup when moving key to card
  • create csr

Event Timeline

ikloecker created this task.
ikloecker changed the task status from Open to Testing.Sep 2 2025, 4:54 PM
timegrid changed the task status from Testing to Open.Sep 8 2025, 4:49 PM
timegrid added a subscriber: timegrid.

Tested on gpg4win-5.0.0-beta369 @ win10.

At first it looked good regarding the persistence, then I found a reproducible issue without restarting:

  1. Export a public cert
  2. Verify some .sig file
  3. Export another public cert -> Location was reset to Documents, no changes in kleopatrastaterc / kleopatrarc
ikloecker mentioned this in Unknown Object (Maniphest Task).Sep 15 2025, 9:51 AM

I don't see how this could happen unless you have canceled an export. In this case Kleopatra saved an empty path as last location and then on the next export Kleopatra proposed Documents. The latest changes prevent Kleopatra from saving an empty path as last location and they ensure that Kleopatra immediately writes [Export]LastDirectory to disk.

ikloecker mentioned this in Unknown Object (Maniphest Task).Sep 22 2025, 9:55 AM
ikloecker changed the task status from Open to Testing.Oct 1 2025, 9:51 AM

Looks good to me on gpg4win-5.0.0-beta395 @ win11

  • checksum creation and verification
  • decrypt/verify files
  • sign/encrypt files
  • export certificates, groups, secret keys, secret subkeys
  • create csr

The former bug was also not reproducible anymore.

Note:

  • secret key backup when moving key to card: this is not a valid test case, as the location is currently fixed to Documents without offering a choice